--- a/NARE.API/NARE.API.csproj
+++ b/NARE.API/NARE.API.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\NARE.Persistence\NARE.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\v1\Agent\" />
+  </ItemGroup>
+
 </Project>
