Moved AgentDTO class. Sending AgentDTO instead of full Agent object for listings

--- a/NARE.Persistence/NARE.Persistence.csproj
+++ b/NARE.Persistence/NARE.Persistence.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190313192201_test.cs" />
+    <Compile Remove="Migrations\20190313193422_test.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.15" />
