--- a/NARE.Persistence/NARE.Persistence.csproj
+++ b/NARE.Persistence/NARE.Persistence.csproj
@@ -11,6 +11,7 @@
     <Compile Remove="Migrations\20190313200044_test.cs" />
     <Compile Remove="Migrations\20190313200634_test.cs" />
     <Compile Remove="Migrations\20190313201521_test.cs" />
+    <Compile Remove="Migrations\20190315012300_test.cs" />
   </ItemGroup>
 
   <ItemGroup>
