--- a/NARE.Tests/NARE.Tests.csproj
+++ b/NARE.Tests/NARE.Tests.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\NARE.Application\NARE.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Application\Listing\Query\GetAgentListings\" />
+  </ItemGroup>
+
 </Project>
