--- a/NARE.API/appsettings.json
+++ b/NARE.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://reecerose.ddns.net",
+  "ApiUrl": "https://nare.ddns.net",
   "ApiUrl-Dev": "https://localhost:5000",
   "FrontEndUrl":  "https://nare.reecerose.com",
   "FrontEndUrl-Dev":  "localhost:8080"
